# accounting_system

./: .gitignore  Cargo.toml  README.md
examples/: buy.rs  calculate.rs  providers.rs
src/: lib.rs
src/accounting/: mod.rs  product.rs  shop.rs  unit.rs  warehouse.rs
src/providers/: belarus.rs  mod.rs  russia.rs  transportation.rs
src/writer/: file.rs  mod.rs  secure.rs  terminal.rs  write.rs
